Fix validation error and Add production version

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="input-group item-input justify-content-center">
               <input type="email" class="form-control" placeholder="YOUR EMAIL">
               <div class="input-group-prepend">
-                <div class="input-group-text" id="btnGroupAddon">
+                <div class="input-group-text">
                   <span class="fas fa-check"></span>
                 </div>
               </div>
@@ -111,7 +111,7 @@
           <div class="input-group item-input col-md-6">
             <button type="button" class="form-control btn-primary">apple store</button>
             <div class="input-group-prepend">
-              <div class="input-group-text" id="btnGroupAddon">
+              <div class="input-group-text">
                 <span class="fab fa-apple"></span>
               </div>
             </div>
@@ -119,7 +119,7 @@
           <div class="input-group item-input col-md-6">
             <button type="button" class="form-control btn-primary">play store</button>
             <div class="input-group-prepend">
-              <div class="input-group-text" id="btnGroupAddon">
+              <div class="input-group-text">
                 <span class="fab fa-android"></span>
               </div>
             </div>
