Fix footer-ico src

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <p>Copyright by phototime - all right reserved</p>
           </div>
           <div class="col-md-6 footer-icon">
-            <img src="../images/icons/photo-icon-green.png" alt="footer-icon">
+            <img src="images/icons/photo-icon-green.png" alt="footer-icon">
           </div>
         </div>
       </div>
